Added ShadowPreferenceActivity with tests Signed-off-by: Ronald Dehuysser <ronald.dehuysser@gmail.com>

--- a/src/test/resources/res/values/strings.xml
+++ b/src/test/resources/res/values/strings.xml
@@ -8,4 +8,5 @@
         <item>foo</item>
         <item>bar</item>
     </string-array>
+    <string name="preference_homer_simpson">Donuts</string>
 </resources>
